# repogrep

./: .gitignore  README.md  TODO.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: deploy-website.yml
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  main.rs  models.rs  search.rs
src/components/: CodePreviewPane.vue  MatchListPane.vue  PreviewPane.vue  SearchBar.vue  Settings.vue  Sidebar.vue  SnippetInputPane.vue  SnippetList.vue
src/stores/: app.js  snippets.js
website/: index.html  package-lock.json  package.json  vite.config.js
website/public/: CNAME
website/src/: App.vue  style.css
