[package]
name = "repogrep"
version = "0.1.0"
description = "Local code search across project directories"
authors = ["Aftaab Siddiqui"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
walkdir = "2"
rayon = "1"
regex = "1.12.3"
globset = "0.4.18"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
